--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <div class='center'>
         <h1 class='title'> Event Horizon<br>Research </h1>
         <ul>
-            <li><a  href='home.html'> Home </a></li>
+            <li><a  href='index.html'> Home </a></li>
             <li><a  href='about.html'> about </a></li>
             <li class='dev'><a href='#'> Development </a>
                 <ul>
