--- a/about.html
+++ b/about.html
@@ -3,6 +3,7 @@
         <meta name='viewport' content='width=display-width, initial-scale=1.0'>
         <title>Event Horizon Research</title>
         <link rel='stylesheet' href='stylesheet.css'>
+        <meta name='viewport' content='width=device-width, initial-scale=1.0'>
     </head>
     <body class='aboutbody'>
         <div class='center'>
