adjusted meta tag

--- a/about.html
+++ b/about.html
@@ -1,9 +1,8 @@
 <html>
     <head>
-        <meta name='viewport' content='width=display-width, initial-scale=1.0'>
         <title>Event Horizon Research</title>
         <link rel='stylesheet' href='stylesheet.css'>
-        <meta name='viewport' content='width=device-width, initial-scale=1.0'>
+        <meta name='viewport' content='width=device-width'>
     </head>
     <body class='aboutbody'>
         <div class='center'>
