--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
         <title>Event Horizon Research</title>
         <link rel='stylesheet' href='stylesheet.css'>
-        <meta name='viewport' content='width=device-width'>
+        <meta name='viewport' content='width=device-width, height=device-height, initial-scale=1.0'>
     </head>
     <body class='homebody'>
         <div class='center'>
