--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <head>
         <title>Event Horizon Research</title>
         <link rel='stylesheet' href='stylesheet.css'>
-        <meta name='viewport' content='width=device-width, height=device-height, initial-scale=1.0'>
+        <meta name='viewport' content='width=device-width, initial-scale=1.0'>
     </head>
     <body class='aboutbody'>
         <div class='center'>
