--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
                     <li><a href='#'>Planter</a></li>
                 </ul>
             </li>
-            <li><a  href='#'> Gallery </a></li>
+            <li><a  href='gallery.html'> Gallery </a></li>
             <li><a  href='#'> Contact </a></li>
         </ul>
       
-        <img src='img/EventHorizonLogoTransparent.png'>
+        <img class='logo' src='img/EventHorizonLogoTransparent.png'>
     </body>
 </html>
