--- a/gallery.html
+++ b/gallery.html
@@ -6,10 +6,8 @@
         <link rel='stylesheet' href='stylesheet.css'>
         <meta name='viewport' content='width=device-width, initial-scale=1.0'>
     </head>
-    <body class='gallerybody'>
-        
-        <h1 class='title'> Event Horizon<br>Research </h1>
-        <h2 class='gallery'> Gallery </h2>
+    <body class='gallerybody'>        
+        <h1 class='title'> Event Horizon<br>Research </h1>       
         <ul>
             <li><a  href='index.html'> Home </a></li>
             <li><a  href='about.html'> about </a></li>
@@ -23,10 +21,11 @@
             <li><a  href='gallery.html'> Gallery </a></li>
             <li><a  href='#'> Contact </a></li>
         </ul>
-        <img class='logo_gal' src='img/EventHorizonLogoTransparent.png'>
+        <h2 class='gallery'> Gallery </h2>
         <img class='workbench' src='img/workbench.JPG'>
         <img class='prusa' src='img/prusamk3s.JPG'>
         <img class='phrozen' src='img/sonicmini4k.JPG'>
         <img class='forearm' src='img/robotarmparts.JPG'>
+        <img class='logogal' src='img/EventHorizonLogoTransparent.png'>
     </body>
 </html>
