gallery spacing fix

--- a/gallery.html
+++ b/gallery.html
@@ -22,10 +22,10 @@
             <li><a  href='#'> Contact </a></li>
         </ul>
         <h2 class='gallery'> Gallery </h2>
-        <img class='workbench' src='img/workbench.JPG'>
-        <img class='prusa' src='img/prusamk3s.JPG'>
-        <img class='phrozen' src='img/sonicmini4k.JPG'>
-        <img class='forearm' src='img/robotarmparts.JPG'>
-        <img class='logogal' src='img/EventHorizonLogoTransparent.png'>
+        <img class='workbench' src='img/workbench.JPG'
+        ><img class='prusa' src='img/prusamk3s.JPG'> 
+        <img class='phrozen' src='img/sonicmini4k.JPG'
+        ><img class='forearm' src='img/robotarmparts.JPG'>
+        <img class='logogal' src='img/EventHorizonLogoTransparent.png'>       
     </body>
 </html>
