--- a/gallery.html
+++ b/gallery.html
@@ -5,6 +5,7 @@
         <title>Event Horizon Research</title>
         <link rel='stylesheet' href='stylesheet.css'>
         <meta name='viewport' content='width=device-width, initial-scale=1.0'>
+        <link rel="shortcut icon" type="image/png" href="img/EventHorizonLogoTransparent.png">
     </head>
     <body class='gallerybody'>        
         <h1 class='title'> Event Horizon<br>Research </h1>       
